[package]
publish     = false
name        = "rust-brainfuck"
version     = "0.1.0"
authors     = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "A fast and simple brainfuck interpreter in pure Rust"
license     = "MIT"
repository  = "https://github.com/dmitmel/rust-brainfuck.git"
homepage    = "https://github.com/dmitmel/rust-brainfuck"
readme      = "README.md"
categories  = ["command-line-utilities", "emulators"]
keywords    = ["brainfuck", "language", "interpreter"]

[dependencies]
failure        = "0.1"
failure_derive = "0.1"
