[package]
publish     = false
name        = "brainwhat"
version     = "0.1.0"
authors     = ["Dmytro Meleshko <dmytro.meleshko@gmail.com>"]
description = "A fast optimizing Brainfuck interpreter written in pure Rust"
license     = "MIT"
repository  = "https://github.com/dmitmel/brainwhat.git"
homepage    = "https://github.com/dmitmel/brainwhat"
readme      = "README.md"
categories  = ["command-line-utilities", "emulators"]
keywords    = ["brainfuck", "language", "interpreter"]

[dependencies]
failure        = "0.1"
failure_derive = "0.1"
